# vmux

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURE.md  LICENSE  Makefile  README.md  TODO.md
crates/vmux/: Cargo.toml
crates/vmux/src/: component.rs  core.rs  event.rs  lib.rs  main.rs  session.rs  system.rs
crates/vmux_agent/: Cargo.toml
crates/vmux_agent/src/: acp_install.rs  acp_registry.rs  agents_page.rs  app.rs  app_plugin.rs  chat_page.rs  claude.rs  client.rs  codex.rs  components.rs  compose.rs  cwd.rs  desktop_plugin.rs  echo.rs  echo_plugin.rs  events.rs  exec.rs  gui.rs  gui_plugin.rs  handoff.rs  http.rs  kind.rs  launch.rs  lib.rs  managed_mcp.rs  mcp.rs  message.rs  plugin.rs  providers.rs  run_state.rs  run_state_kind.rs  session.rs  snapshot_updater.rs  strategy.rs  stream.rs  target.rs  terminal_integration.rs  tidy.rs  toast.rs  tool_dispatch.rs  (+5 more)
crates/vmux_agent/tests/: echo_smoke.rs  streaming_smoke.rs
crates/vmux_app/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_app/assets/: index.css
crates/vmux_app/src/: lib.rs  main.rs
crates/vmux_browser/: Cargo.toml
crates/vmux_browser/src/: extensions.rs  host_focus.rs  lib.rs  remote.rs  vimium.rs
crates/vmux_chat_ui/: Cargo.toml
crates/vmux_chat_ui/src/: lib.rs  prompt_composer.rs  prompt_media_options.rs
crates/vmux_cli/: Cargo.toml
crates/vmux_cli/src/: commands.rs  main.rs
crates/vmux_cli/tests/: mcp_smoke.rs  registry.rs  tools.rs  version.rs
crates/vmux_command/: Cargo.toml  Dioxus.toml  build.rs  tailwind.config.js
crates/vmux_command/assets/: index.css  index.html
crates/vmux_command/src/: app.rs  bundle.rs  command.rs  event.rs  island.rs  issued.rs  lib.rs  open.rs  open_target.rs  page.rs  plugin.rs  prompt_media.rs  results.rs  shortcut.rs  snapshot.rs  style.rs
crates/vmux_command/tests/: expand_direction.rs  explicit_variant_chord.rs  open_command_derives.rs
crates/vmux_command_mcp/: Cargo.toml
crates/vmux_command_mcp/src/: lib.rs
crates/vmux_command_palette/: Cargo.toml  Dioxus.toml  build.rs
crates/vmux_command_palette/assets/: index.css  index.html
crates/vmux_command_palette/src/: app.rs  bundle.rs  event.rs  lib.rs  plugin.rs
crates/vmux_core/: Cargo.toml
crates/vmux_core/src/: active.rs  agent.rs  agent_setup.rs  archive.rs  command_palette.rs  dom_snapshot.rs  editor.rs  event.rs  extension.rs  host_spawn.rs  icon.rs  input_root.rs  knowledge.rs  lib.rs  media.rs  navigation_history.rs  notify.rs  page.rs  page_open.rs  pane_corner_clip.rs  process_id.rs  profile.rs  registry.rs  scroll.rs  selection.rs  session.rs  team.rs  terminal.rs  tools.rs  vault.rs  webview_document_emit.rs
crates/vmux_daemon/: Cargo.toml
crates/vmux_daemon/src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs  session.rs
crates/vmux_daemon/tests/: selection.rs
crates/vmux_desktop/: Cargo.toml  build.rs
crates/vmux_desktop/src/: agent.rs  agent_layout.rs  agent_query.rs  appearance.rs  background_lifecycle.rs  bookmark_menu.rs  bookmark_persistence.rs  boot_status.rs  browser.rs  browser_scroll.rs  browser_snapshot.rs  capture_output.rs  clipboard.rs  command.rs  command_bar.rs  confirm_close.rs  disabled_features.rs  display.rs  dynamic_island.rs  event_tap.rs  focus_native.rs  glass.rs  keybinding.rs  layout.rs  layout3.rs  layout_native.rs  layout_next.rs  layout_response.rs  lechat_bridge.rs  lib.rs  log_forward.rs  main.rs  media_permission.rs  menu.rs  native_keyboard.rs  notify.rs  os_menu.rs  outline.wgsl  palette.rs  panic_hook.rs  (+26 more)
crates/vmux_desktop/tests/: info_plist.rs  no_window_despawn.rs  packaging_metadata.rs  release_invariants.rs
crates/vmux_desktop_next/: Cargo.toml
crates/vmux_desktop_next/src/: layout.rs  lib.rs
crates/vmux_editor/: Cargo.toml
crates/vmux_editor/src/: dir.rs  edit.rs  explorer.rs  explorer_fs.rs  explorer_model.rs  fold.rs  fold_store.rs  highlight.rs  keymap.rs  lang_icon.rs  lib.rs  lsp.rs  lsp_page.rs  markdown.rs  minimap.rs  note.rs  page.rs  page_model.rs  plugin.rs  preview.rs  viewport.rs
crates/vmux_editor/tests/: lsp_integration.rs  page_source.rs
crates/vmux_git/: Cargo.toml
crates/vmux_git/src/: event.rs  highlight.rs  job.rs  lib.rs  parse.rs  plugin.rs  runner.rs  ui.rs  view.rs  worktree.rs
crates/vmux_header/: Cargo.toml  build.rs
crates/vmux_header/assets/: index.css  index.html
crates/vmux_header/src/: app.rs  event.rs  lib.rs  plugin.rs  system.rs
crates/vmux_history/: .gitignore  Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json  tailwind.config.js
crates/vmux_history/assets/: index.css  index.html  input.css
crates/vmux_history/scripts/: inline-history-css.mjs
crates/vmux_history/src/: app.rs  cef.rs  embedded_web_dist.rs  event.rs  lib.rs  main.rs  page.rs  payload.rs  plugin.rs  prune.rs  query.rs  server.rs  spawn.rs  transition.rs
crates/vmux_history_poc/: Cargo.toml  build.rs
crates/vmux_history_poc/assets/: index.html  input.css
crates/vmux_history_poc/examples/: history.rs
crates/vmux_history_poc/src/: app.rs  bridge.rs  lib.rs  main.rs
crates/vmux_input/: Cargo.toml
crates/vmux_input/src/: cef_keyboard_target.rs  component.rs  lib.rs  system.rs  text_input_emacs_bindings.js
crates/vmux_knowledge/: Cargo.toml
crates/vmux_knowledge/src/: event.rs  lib.rs  page.rs  plugin.rs  store.rs
crates/vmux_knowledge/tests/: page_source.rs
crates/vmux_layout/: Cargo.toml  build.rs
crates/vmux_mcp/: Cargo.toml
crates/vmux_mobile/: Cargo.toml  Dioxus.toml
crates/vmux_profile/: Cargo.toml  build.rs
crates/vmux_remote/: Cargo.toml
crates/vmux_scene/: Cargo.toml
examples/: Cargo.toml  history.rs  v0.1-architecture.rs
vmux_docs/: .gitignore  Cargo.toml
vmux_docs/src/: lib.rs  main.rs  model.rs  sig.rs  translate.rs
vmux_docs/tests/: format_version.rs  translate_test.rs
website/: Cargo.toml  Dioxus.toml  index.html  tailwind.input.css
website/public/: updates.json
website/src/: api.rs  app.rs  docs.rs  hooks.rs  landing.rs  lib.rs  main.rs  markdown.rs
website/tests/: api_render.rs
(+1270 files in other folders)
