[workspace]
members = ["crates/*", "patches/*"]
exclude = ["patches/cargo-packager-0.11.8", "website"]
default-members = ["crates/vmux_desktop"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "AI-native workspace combining browser and terminal panes"
license = "MIT"
homepage = "https://vmux.ai"
repository = "https://github.com/vmux-ai/vmux"

[workspace.dependencies]
bevy = { version = "0.18", default-features = true, features = ["https"] }
bevy_ecs = { version = "0.18", default-features = true }
bevy_reflect = { version = "0.18", default-features = true }
bevy_winit = { version = "0.18", default-features = true }
bevy_cef = "0.5.2"
bevy_cef_core = "0.5.2"
leafwing-input-manager = "0.20"
moonshine-save = "0.6.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "net",
    "io-util",
    "signal",
    "time",
] }
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
url = "2"
crossbeam-channel = "0.5"
notify = "6"
dioxus = { version = "=0.7.4", features = ["web"] }
wasm-bindgen = "0.2"
regex = "1"

alacritty_terminal = "0.26"
portable-pty = "0.9"
rfd = "0.15"
vte = "0.15"
rkyv = { version = "0.8", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde"] }
tray-icon = "0.19"

[profile.release.package.vmux_history]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_header]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_ui]
opt-level = "z"
codegen-units = 1



[profile.release.package.vmux_command_bar]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_terminal]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_sessions]
opt-level = "z"
codegen-units = 1

[patch.crates-io]
bevy_cef = { path = "patches/bevy_cef-0.5.2" }
bevy_cef_core = { path = "patches/bevy_cef_core-0.5.2" }
