[workspace]
members = ["crates/*", "patches/*"]
exclude = ["patches/cargo-packager-0.11.8", "website"]
default-members = ["crates/vmux_desktop"]
resolver = "3"

[workspace.package]
version = "0.0.16"
edition = "2024"
description = "AI-native workspace combining browser and terminal panes"
license = "MIT"
homepage = "https://vmux.ai"
repository = "https://github.com/vmux-ai/vmux"

[workspace.dependencies]
bevy = { version = "0.19.0-rc.2", default-features = false, features = [
    "std",
    "multi_threaded",
    "async_executor",
    "bevy_animation",
    "bevy_asset",
    "bevy_log",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_mesh",
    "bevy_sprite",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_image",
    "bevy_scene",
    "bevy_state",
    "bevy_input_focus",
    "bevy_picking",
    "mesh_picking",
    "sprite_picking",
    "ui_picking",
    "custom_cursor",
    "reflect_auto_register",
    "default_font",
    "bevy_camera_controller",
    "free_camera",
    "https",
    "x11",
    "wayland",
] }
bevy_ecs = { version = "0.19.0-rc.2", default-features = true }
bevy_reflect = { version = "0.19.0-rc.2", default-features = true }
bevy_winit = { version = "0.19.0-rc.2", default-features = false, features = [
    "x11",
    "wayland",
] }
bevy_cef = "0.5.2"
bevy_cef_core = "0.5.2"
moonshine-save = "0.6.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "net",
    "io-util",
    "signal",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
url = "2"
notify = "6"
dioxus = { version = "=0.7.4", features = ["web"] }
wasm-bindgen = "0.2"
regex = "1"

alacritty_terminal = "0.26"
portable-pty = "0.9"
rfd = "0.15"
rkyv = { version = "0.8", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Dev builds of a Bevy + CEF app are unusably slow without optimizing dependencies.
# Our crates stay at opt-level 1 for fast rebuilds; all deps compile at 3 (cached).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Hot CEF render/compositing path: optimize even in dev so the texture pipeline
# isn't bottlenecked by an unoptimized build during development.
[profile.dev.package.bevy_cef]
opt-level = 3

[profile.dev.package.bevy_cef_core]
opt-level = 3

# Single codegen unit so rkyv's derive-generated internal symbols aren't dropped
# across CGUs at link time (undefined `_anon.*.llvm.*` under --gc-sections /
# -dead_strip — surfaces in Linux test-binary links and the dev dynamic-linking build).
[profile.dev.package.vmux_service]
codegen-units = 1

[profile.release]
strip = true
lto = "thin"

[profile.release.package.vmux_history]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_server]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_ui]
opt-level = "z"
codegen-units = 1



[profile.release.package.vmux_command]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_terminal]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_service]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_space]
opt-level = "z"
codegen-units = 1

[patch.crates-io]
bevy_cef = { path = "patches/bevy_cef-0.5.2" }
bevy_cef_core = { path = "patches/bevy_cef_core-0.5.2" }
bevy_window = { path = "patches/bevy_window-0.19.0-rc.2" }
moonshine-save = { path = "patches/moonshine-save-0.6.1" }
moonshine-util = { path = "patches/moonshine-util-0.4.1" }
