[workspace]
members = ["crates/*", "patches/*"]
exclude = ["patches/cargo-packager-0.11.8", "website", "vmux_docs"]
default-members = ["crates/vmux_desktop"]
resolver = "3"

[workspace.package]
version = "0.0.24"
edition = "2024"
description = "AI-native workspace combining browser and terminal panes"
license = "GPL-3.0-or-later"
homepage = "https://vmux.ai"
repository = "https://github.com/vmux-ai/vmux"

[workspace.dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "std",
    "multi_threaded",
    "async_executor",
    "bevy_asset",
    "bevy_log",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_mesh",
    "bevy_sprite",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_image",
    "bevy_scene",
    "bevy_state",
    "bevy_input_focus",
    "bevy_picking",
    "mesh_picking",
    "sprite_picking",
    "ui_picking",
    "custom_cursor",
    "reflect_auto_register",
    "default_font",
    "https",
    "x11",
    "wayland",
] }
bevy_ecs = { version = "0.19.0", default-features = true }
bevy_reflect = { version = "0.19.0", default-features = true }
bevy_winit = { version = "0.19.0", default-features = false, features = [
    "x11",
    "wayland",
] }
bevy_world_serialization = "0.19.0"
bevy_cef = "0.5.2"
bevy_cef_core = "0.5.2"
moonshine-save = "0.7.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "net",
    "io-util",
    "signal",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
url = "2"
notify = "6"
dioxus = { version = "=0.7.4", features = ["web"] }
wasm-bindgen = "0.2"
regex = "1"
smallvec = "1"

alacritty_terminal = "0.26"
portable-pty = "0.9"
rfd = "0.15"
rkyv = { version = "0.8", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Dev builds of a Bevy + CEF app are unusably slow without optimizing dependencies.
# Our crates stay at opt-level 1 for fast rebuilds; all deps compile at 3 (cached).
[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
debug = false

# Hot CEF render/compositing path: optimize even in dev so the texture pipeline
# isn't bottlenecked by an unoptimized build during development.
# codegen-units=1 keeps bevy_cef's reflect/rkyv generic instantiations in one CGU so
# their internal `_anon.*.llvm.*` symbols aren't dropped across CGUs at -dead_strip link
# time (otherwise binaries linking bevy_cef fail with undefined bevy_reflect symbols).
[profile.dev.package.bevy_cef]
opt-level = 3
codegen-units = 1

[profile.dev.package.bevy_cef_core]
opt-level = 3

# Single codegen unit so rkyv's derive-generated internal symbols aren't dropped
# across CGUs at link time (undefined `_anon.*.llvm.*` under --gc-sections /
# -dead_strip — surfaces in Linux test-binary links and the dev dynamic-linking build).
[profile.dev.package.vmux_service]
codegen-units = 1

[profile.release]
strip = true
lto = "thin"

[profile.cef-helper]
inherits = "release"
lto = "off"

[profile.release.package.vmux_history]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_server]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_ui]
opt-level = "z"
codegen-units = 1



[profile.release.package.vmux_command]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_terminal]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_service]
opt-level = "z"
codegen-units = 1

[profile.release.package.vmux_space]
opt-level = "z"
codegen-units = 1

[patch.crates-io]
bevy_cef = { path = "patches/bevy_cef-0.5.2" }
bevy_cef_core = { path = "patches/bevy_cef_core-0.5.2" }
bevy_remote = { path = "patches/bevy_remote-0.19.0" }
bevy_window = { path = "patches/bevy_window-0.19.0" }
