[workspace]

[package]
name = "vmux_docs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "vmux_docs"
path = "src/main.rs"

[lib]
name = "vmux_docs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustdoc-types = "0.59.0"
rustdoc-json = "0.9.10"
