[workspace]

[package]
name = "vmux_website"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "vmux_website"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.4", features = ["web"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "ccdb07f69383de008a0afadda0e5ab7ec14c1a9c", default-features = true, features = [
    "web",
] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Navigator",
    "Node",
    "Window",
] }
