[workspace]

[package]
name = "vmux_website"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "vmux_website"
path = "src/main.rs"

[lib]
name = "vmux_website"
path = "src/lib.rs"

[dependencies]
dioxus = { version = "=0.7.9", features = ["fullstack", "router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "ccdb07f69383de008a0afadda0e5ab7ec14c1a9c", default-features = true }
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "ccdb07f69383de008a0afadda0e5ab7ec14c1a9c", features = [
    "web",
] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "EventTarget",
    "History",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "Location",
    "MediaQueryList",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Window",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[dev-dependencies]
dioxus-ssr = "0.7"
