[package]
name = "vmux"
description = "vmux — Bevy + embedded CEF webview"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "vmux"
path = "src/main.rs"

[features]
default = []
debug = ["bevy_cef/debug", "vmux_webview/debug"]

[dependencies]
bevy = { workspace = true }
bevy_winit = { workspace = true }
bevy_cef = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_input = { path = "../vmux_input" }
vmux_layout = { path = "../vmux_layout" }
vmux_session = { path = "../vmux_session" }
vmux_settings = { path = "../vmux_settings" }
vmux_webview = { path = "../vmux_webview" }
