[package]
name = "vmux_agent"
description = "Agent CLI strategies (vibe, claude, codex) and shared session ECS abstractions"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
rkyv = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
crossbeam-channel = "0.5"
futures-lite = "2"
futures-util = "0.3"
tokio = { workspace = true, features = ["rt"] }
toml = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_history = { path = "../vmux_history" }
vmux_layout = { path = "../vmux_layout" }
vmux_mcp = { path = "../vmux_mcp" }
vmux_service = { path = "../vmux_service" }
vmux_setting = { path = "../vmux_setting" }
vmux_space = { path = "../vmux_space" }
vmux_terminal = { path = "../vmux_terminal" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
vmux_ui = { path = "../vmux_ui", default-features = false }
vmux_core = { path = "../vmux_core" }
vmux_terminal = { path = "../vmux_terminal", default-features = false }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlElement",
    "KeyboardEvent",
] }

[dev-dependencies]
mockito = "1"
serial_test = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
