[package]
name = "vmux_agent"
description = "Agent CLI strategies (vibe, claude, codex) and shared session ECS abstractions"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
similar = "2"
unicode-segmentation = "1"
vmux_terminal = { path = "../vmux_terminal" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22"
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "blocking"] }
rfd = { workspace = true }
crossbeam-channel = "0.5"
futures-lite = "2"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
tokio = { workspace = true, features = ["rt"] }
toml = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_editor = { path = "../vmux_editor" }
vmux_git = { path = "../vmux_git" }
vmux_history = { path = "../vmux_history" }
vmux_layout = { path = "../vmux_layout" }
vmux_mcp = { path = "../vmux_mcp" }
vmux_service = { path = "../vmux_service" }
vmux_setting = { path = "../vmux_setting" }
vmux_space = { path = "../vmux_space" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
vmux_ui = { path = "../vmux_ui", default-features = false }
vmux_core = { path = "../vmux_core" }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Event",
    "EventInit",
    "EventTarget",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Selection",
] }

[dev-dependencies]
mockito = "1"
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
