[package]
name = "vmux_browser"
description = "Browser and page-open orchestration for vmux"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
chrono = { workspace = true }
ron = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_history = { path = "../vmux_history" }
vmux_layout = { path = "../vmux_layout" }
vmux_service = { path = "../vmux_service" }
vmux_setting = { path = "../vmux_setting" }
vmux_space = { path = "../vmux_space" }
vmux_terminal = { path = "../vmux_terminal" }
vmux_ui = { path = "../vmux_ui", default-features = false }
vmux_vimium = { path = "../vmux_vimium" }

[dev-dependencies]
vmux_agent = { path = "../vmux_agent" }
