[package]
name = "vmux_browser"
description = "Browser and page-open orchestration for vmux"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
chrono = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vmux_command = { path = "../vmux_command" }
vmux_core = { path = "../vmux_core" }
vmux_git = { path = "../vmux_git" }
vmux_history = { path = "../vmux_history" }
vmux_layout = { path = "../vmux_layout" }
vmux_service = { path = "../vmux_service" }
vmux_setting = { path = "../vmux_setting" }
vmux_space = { path = "../vmux_space" }
vmux_terminal = { path = "../vmux_terminal" }
vmux_ui = { path = "../vmux_ui", default-features = false }

[dev-dependencies]
tempfile = "3"
vmux_agent = { path = "../vmux_agent" }
