[package]
name = "vmux_cli"
version.workspace = true
edition.workspace = true
description = "Vmux command-line interface"
publish = false

[[bin]]
name = "vmux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
vmux_mcp = { path = "../vmux_mcp" }
vmux_service = { path = "../vmux_service" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
