[package]
name = "vmux_command"
description = "vmux — command palette (Arc-style) UI and input"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
leafwing-input-manager = { workspace = true }
vmux_core = { path = "../vmux_core" }
vmux_layout = { path = "../vmux_layout" }
