[package]
name = "vmux_command"
description = "Bevy + CEF + Dioxus command bar webview"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []
web = []

[[bin]]
name = "vmux_command_app"
path = "src/main.rs"
required-features = ["web"]

[lib]
path = "src/lib.rs"

[build-dependencies]
vmux_webview_app = { path = "../vmux_webview_app", features = ["build"] }

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_ecs = { workspace = true }
muda = "0.17"
vmux_macro = { path = "../vmux_macro" }
vmux_webview_app = { path = "../vmux_webview_app" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true }
js-sys = "0.3"
vmux_ui = { path = "../vmux_ui", default-features = false }
wasm-bindgen = "0.2.115"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "EventTarget", "Event", "EventInit",
    "KeyboardEvent", "KeyboardEventInit",
    "AddEventListenerOptions",
    "ScrollIntoViewOptions", "ScrollLogicalPosition",
] }
