[package]
name = "vmux_command"
description = "Command vocab + command-bar wire events"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
debug = []

[lib]
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vmux_history = { path = "../vmux_history", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_ecs = { workspace = true }
muda = "0.19"
vmux_core = { path = "../vmux_core" }
vmux_macro = { path = "../vmux_macro" }
