[package]
name = "vmux_core"
description = "vmux — shared scene markers (splits vmux / vmux_webview for Cargo)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
