[package]
name = "vmux_core"
description = "Shared component types for vmux"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
moonshine-save = { workspace = true }
