[package]
name = "vmux_daemon"
version.workspace = true
edition.workspace = true
description = "Background daemon for persistent terminal sessions"
publish = false

[[bin]]
name = "vmux-daemon"
path = "src/main.rs"

[lib]
name = "vmux_daemon"
path = "src/lib.rs"

[dependencies]
rkyv = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
vmux_terminal = { path = "../vmux_terminal" }
