[package]
name = "vmux_desktop"
version.workspace = true
edition.workspace = true
description.workspace = true
publish = false

[features]
dev = ["bevy_cef/debug", "bevy/dynamic_linking"]

[[bin]]
name = "vmux_desktop"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_cef = { workspace = true }
bevy_cef_core = { workspace = true }

libc = "0.2"
muda = "0.19"
parking_lot = "0.12"
bevy_reflect = { workspace = true }
moonshine-save = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
vmux_agent = { path = "../vmux_agent" }
vmux_browser = { path = "../vmux_browser" }
vmux_core = { path = "../vmux_core" }
vmux_history = { path = "../vmux_history" }
vmux_layout = { path = "../vmux_layout" }
vmux_command = { path = "../vmux_command" }
vmux_macro = { path = "../vmux_macro" }
vmux_ui = { path = "../vmux_ui", default-features = false }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
vmux_service = { path = "../vmux_service" }
vmux_space = { path = "../vmux_space" }
vmux_terminal = { path = "../vmux_terminal" }
vmux_setting = { path = "../vmux_setting" }
vmux_server = { path = "../vmux_server" }
vmux_vibe_setup = { path = "../vmux_vibe_setup" }
url = { workspace = true }

rfd = { workspace = true }
notify = { workspace = true }
tempfile = "3"
semver = "1"
cargo-packager-updater = "0.2"
tray-icon = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSEvent",
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSGraphics",
    "NSColor",
    "NSGlassEffectView",
    "NSPanel",
    "NSVisualEffectView",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSScreen",
    "NSAnimation",
] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSData"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation"] }
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes"] }
objc2-core-foundation = { version = "0.3", features = [
    "CFBase",
    "CFRunLoop",
    "CFMachPort",
] }
block2 = "0.6"
raw-window-handle = "0.6"

[package.metadata.packager]
product-name = "Vmux"
identifier = "ai.vmux.desktop"
category = "Productivity"
copyright = "Copyright 2024-2025 Junichi Sugiura. MIT License."
homepage = "https://vmux.ai"
formats = ["app", "dmg"]
icons = ["../../packaging/macos/Vmux.icns"]
before-packaging-command = "bash ../../scripts/build-package-binaries.sh"
before-each-package-command = "bash ../../scripts/before-each-package.sh"
binaries = [
    { path = "vmux_desktop", main = true },
    { path = "vmux" },
    { path = "Vmux Service" },
]

[package.metadata.packager.dmg]
background = "../../packaging/macos/dmg-background.png"

window-size = { width = 660, height = 400 }
app-position = { x = 180, y = 180 }
application-folder-position = { x = 480, y = 180 }

[package.metadata.packager.macos]
minimum-system-version = "13.0"
entitlements = "../../packaging/macos/Vmux.entitlements"
